@@ -84,7 +84,7 @@ echo $html;
 $endtime = microtime();
 
 echo "<!-- Generated in ".microtime_diff($starttime,$endtime)." seconds by CMS Made Simple $CMS_VERSION (".$cached."cached) using $sql_execs SQL queries -->\n";
-echo "<!-- Generated by CMS Made Simple -- Released under the GPL -- http://cmsmadesimple.org -->\n";
+echo "<!-- Generated by CMS Made Simple - Released under the GPL - http://cmsmadesimple.org -->\n";
 echo "<!-- Removal of this message without being shown elsewhere on this site is a violation of the terms of the license -->\n";
 
 if (get_site_preference('enablesitedownmessage') == "1")
