@@ -5,6 +5,8 @@ Version 0.7 -- Subversion
 * Added new admin style (thijs)
 * Added language as a user perference and also moved it to the login page
 * Added java based syntax highlighting as a user preference
+* Fixed bug with start and end dates when adding new News item (BamaRob)
+* Fixed missing template option for News module (#67)
 
 Version 0.6.3 -- Wed Sep 22 2004 
 -----------------
